[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[project]
name = "qrcode"
version = "8.2"
description = "QR Code image generator"
authors = [
    { name = "Lincoln Loop", email = "info@lincolnloop.com" },
]
license = { text = "BSD-3-Clause" }
dynamic = [ "readme" ]
keywords = ["qr", "denso-wave", "IEC18004"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = "~=3.9"
dependencies = [
    "colorama; sys_platform == 'win32'",
]


[project.optional-dependencies]
pil = ["pillow >=9.1.0"]
png = ["pypng"]
all = ["pypng", "pillow >=9.1.0"]

[project.urls]
homepage = "https://github.com/lincolnloop/python-qrcode"
repository = "https://github.com/lincolnloop/python-qrcode.git"
documentation = "https://github.com/lincolnloop/python-qrcode#readme"
changelog = "https://github.com/lincolnloop/python-qrcode/blob/main/CHANGES.rst"
"Bug Tracker" = "https://github.com/lincolnloop/python-qrcode/issues"

[project.scripts]
qr = "qrcode.console_scripts:main"

[tool.poetry]
packages = [{include = "qrcode"}]
readme = ["README.rst", "CHANGES.rst"]

# There is no support for data files yet.
# https://github.com/python-poetry/poetry/issues/9519
#
# data_files = [
#     { destination = "share/man/man1", from = [ "doc/qr.1" ] },
# ]

[tool.poetry.group.dev.dependencies]
pytest = {version = "*"}
pytest-cov = {version = "*"}
tox = {version = "*"}
ruff = {version = "*"}
pypng = {version = "*"}
pillow = {version = ">=9.1.0"}
docutils = "^0.21.2"
zest-releaser = {extras = ["recommended"], version = "^9.2.0"}

[tool.zest-releaser]
less-zeros = "yes"
version-levels = 2
tag-format = "v{version}"
tag-message = "Version {version}"
tag-signing = "yes"
date-format =" %%-d %%B %%Y"
prereleaser.middle = [
    "qrcode.release.update_manpage"
]
