[metadata]
name = qrcode
version = 6.2.dev0
description = QR Code image generator
long_description = file: README.rst, CHANGES.rst
author = Lincoln Loop
author_email = info@lincolnloop.com
url = https://github.com/lincolnloop/python-qrcode
keywords = qr denso-wave IEC18004
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    six
    colorama;platform_system=="Windows"

[options.extras_require]
maintainer =
    zest.releaser[recommended]
dev =
    tox
    pytest
    mock;python_version<"3"
test =
    pytest
    pytest-cov
    mock;python_version<"3"
pil =
    pillow

[options.entry_points]
console-scripts =
    qr = qrcode.console_scripts:main

[bdist_wheel]
# Works in both Python 2 and Python 3
universal = 1

[flake8]
exclude =
    .tox
    .git
    __pycache__
    build
    dist

[coverage:run]
source = qrcode

[zest.releaser]
less-zeros = yes
version-levels = 2
tag-format = v{version}
tag-message = Version {version}
tag-signing = yes
date-format = %%-d %%B %%Y
prereleaser.middle =
    qrcode.release.update_manpage

[tool:pytest]
filterwarnings = module
