[metadata]
name = qrcode
version = 7.3.dev0
description = QR Code image generator
long_description = file: README.rst, CHANGES.rst
author = Lincoln Loop
author_email = info@lincolnloop.com
url = https://github.com/lincolnloop/python-qrcode
keywords = qr denso-wave IEC18004
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    colorama;platform_system=="Windows"
python_requires = >= 3.6

[options.extras_require]
maintainer =
    zest.releaser[recommended]
dev =
    tox
    pytest
test =
    pytest
    pytest-cov
pil =
    pillow
all =
    zest.releaser[recommended]
    tox
    pytest
    pytest
    pytest-cov
    pillow

[options.entry_points]
console_scripts =
    qr = qrcode.console_scripts:main

[flake8]
exclude =
    .tox
    .git
    __pycache__
    build
    dist

[coverage:run]
source = qrcode

[zest.releaser]
less-zeros = yes
version-levels = 2
tag-format = v{version}
tag-message = Version {version}
tag-signing = yes
date-format = %%-d %%B %%Y
prereleaser.middle =
    qrcode.release.update_manpage

[tool:pytest]
filterwarnings = module
